# Nasa_shark_hackaton

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: generate_point.rs  load_land_polygons.rs  main.rs  shark.rs  simulation.rs  tick.rs
frontend/: package.json
frontend/src/: App.tsx  Map.tsx
