[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-channel = "0.3.31"
futures-util = "0.3.31"
geo = { version = "0.31.0", features = ["serde", "use-serde"] }
lazy_static = "1.5.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shapefile = "0.7.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.28.0"
